Page: Added a header part of flipkart page

--- a/Flipkart.html
+++ b/Flipkart.html
@@ -1,8 +1,20 @@
+
 <!DOCTYPE html>
+  <!-- Head part code -->
 <head>
     <title>Flipkart clone pgae</title>
 
 </head>
+ <!-- Body part code -->
 <body>
- <p>My Flipkart shooping website</p>
+<table border="3"width = "100%">
+    <tr>
+        <td><img src="/home/rahulkumar/Desktop/Picture/240.jpg" height= 8% ,width = 10%></td>
+        <td><input type = "text" placeholder = "Search for products, brands and more"> </td>
+        <td>Login & Signup</td> 
+        <td>More</td>
+        <td><img src = "/home/rahulkumar/Desktop/Picture/cart.jpeg"></td>
+    
+    </tr>
 </body>
+</html>
