Page: Added a Css for DEsign work

--- a/Flipkart.html
+++ b/Flipkart.html
@@ -3,6 +3,7 @@
   <!-- Head part code -->
 <head>
     <title>Flipkart clone page</title>
+    <!-- Css Design work for the pages -->
     <style>
         .vl {
           border-top: 3px solid #F1F3F6 ;
@@ -34,12 +35,13 @@
         <th><i class="fas fa-cart-arrow-down"></i></th>
       <th width = "30%" align = "left"><input   size = "40%" width = "500%"  type="text" placeholder="Search for products, brands and more" name="search">  <button type="submit"><i class="fa fa-search"></i></button></button></th>
         <!-- <th width="30" align ="center">      <button type="submit"><i class="fa fa-search"></i><input size = "50%" height="90%"  width = "500%" class="header-center-input"  type = "text" placeholder = "Search for products, brands and more"> </th> -->
-        <th width="20%" align = "right"><input align = "centre" size = "8%"   type = "text" color="white" placeholder = "Login"> </th>
+        <th width="20%" align = "right"> <font color= "blue"><input  align = "centre" size = "8%"   type = "text" color="white" placeholder = "Login"> </th>
        
         <th width="8%"><font color= "white">More</font></th>
         <th width="3%" align="left"><img src = "/home/rahulkumar/Desktop/Picture/cart2.jpeg" width="40" height="20"></th>
         <th width="3%"><font color= "white">Cart</font></th>
         <th width="13%"></th>
+
     </tr>
 </table>
 
@@ -69,7 +71,7 @@
         <th align = "left" width="12.5%">Deals of the Day</th>
         <th align = "Left" width="2.5%"><img src = "/home/rahulkumar/Desktop/Picture/clock.png" width="20" height="25"></th>
         <th align = "Left" width="8.5%"style="color: gray;"> 22:07:36 Left </th>
-        <th align = "right"><button size ="10%"type="button" style ="background-color: #2986dd"; font color= "white"; ondblclick="alert('Welcome to Flipkart Offer')">View all<b/utton></th>
+        <th align = "right"><button  border = "0" size ="10%"type="button" style ="background-color: #2986dd"; font color= "white"; ondblclick="alert('Welcome to Flipkart Offer')">View all</th>
         
     </tr>
 </table>
